Scale imagepipe spray brushes as well

Fixes T2369
BUG:362136