plugins/paintops/spray/spray_brush.cpp
@@ -290,6 +290,7 @@ void SprayBrush::paint(KisPaintDeviceSP dab, KisPaintDeviceSP source,
 
                     QTransform m;
                     m.rotate(rad2deg(rotationZ));
+                    m.scale(additionalScale, additionalScale);
 
                     if (m_shapeDynamicsProperties->randomSize) {
                         m.scale(particleScale, particleScale);
@@ -320,7 +321,9 @@ void SprayBrush::paint(KisPaintDeviceSP dab, KisPaintDeviceSP source,
             // Auto-brush
         }
         else {
-            QPointF hotSpot = m_brush->hotSpot(particleScale, particleScale, -rotationZ, info);
+            QPointF hotSpot = m_brush->hotSpot(particleScale * additionalScale,
+                                               particleScale * additionalScale,
+                                               -rotationZ, info);
             QPointF pos(nx + x, ny + y);
             QPointF pt = pos - hotSpot;
 
@@ -335,7 +338,9 @@ void SprayBrush::paint(KisPaintDeviceSP dab, KisPaintDeviceSP source,
             //KisFixedPaintDeviceSP dab;
             if (m_brush->brushType() == IMAGE ||
                     m_brush->brushType() == PIPE_IMAGE) {
-                m_fixedDab = m_brush->paintDevice(m_fixedDab->colorSpace(), particleScale, -rotationZ, info, xFraction, yFraction);
+                m_fixedDab = m_brush->paintDevice(m_fixedDab->colorSpace(),
+                                                  particleScale * additionalScale,
+                                                  -rotationZ, info, xFraction, yFraction);
 
                 if (m_colorProperties->useRandomHSV && m_transfo) {
                     quint8 * dabPointer = m_fixedDab->data();
@@ -345,7 +350,10 @@ void SprayBrush::paint(KisPaintDeviceSP dab, KisPaintDeviceSP source,
 
             }
             else {
-                m_brush->mask(m_fixedDab, m_inkColor, particleScale, particleScale, -rotationZ, info, xFraction, yFraction);
+                m_brush->mask(m_fixedDab, m_inkColor,
+                              particleScale * additionalScale,
+                              particleScale * additionalScale,
+                              -rotationZ, info, xFraction, yFraction);
             }
             m_painter->bltFixed(QPoint(ix, iy), m_fixedDab, m_fixedDab->bounds());
         }
